# grpo

./: .gitignore  README.md  pyproject.toml
data/: vocab.json
src/grpo/: app.py  common.py  train.py
